# rsomics-pca

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  fmt.rs  lib.rs
tests/: compat.rs  oracle_skbio.py
tests/golden/: inf.tsv  iris_like.tsv  nan.tsv  rand_6x4.eigh.golden  rand_6x4.svd.golden  rand_6x4.tsv  single_sample.tsv
