[package]
name = "rsomics-pca"
version = "0.1.1"
description = "Principal Component Analysis (PCA) of a feature/sample table — scikit-bio skbio.stats.ordination.pca equivalent (column centering + eigh/SVD decomposition)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-pca"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-pca"
path = "src/main.rs"

[lib]
name = "rsomics_pca"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
faer = { version = "0.24", default-features = false, features = ["std", "linalg", "rayon"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
